# CW6_mailings_service

./: .env.sample  README.md  pyproject.toml  requirements.txt
apps/blog/: admin.py  forms.py  models.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_initial.py
apps/blog/templates/blog/: article_form.html  article_list.html
apps/client/: admin.py  forms.py  models.py  urls.py  views.py
apps/client/migrations/: 0001_initial.py  0002_initial.py
apps/client/templates/client/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
apps/crontab/: apps.py
apps/mailing/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/mailing/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/mailing/templates/mailing/: logs_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
apps/main/: urls.py  utils.py  views.py
apps/main/static/css/: my_style.css
apps/main/templates/main/: base.html  index.html
apps/message/: admin.py  forms.py  models.py  views.py
apps/message/migrations/: 0001_initial.py  0002_initial.py
apps/message/templates/message/: message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/templatetags/: user_tags.py
config/: settings.py  urls.py
fixtures/: 01_perms.json  02_users.json  03_clients.json  04_messages.json  06_articles.json
(+3 files in other folders)
