[tool.poetry]
name = "mailing service in django"
version = "0.1.0"
description = "Meiling service"
authors = ["Sem <semseveryanin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
pytils = "^0.4.1"
ipython = "^8.24.0"
django-crontab = "^0.7.1"
redis = "^5.0.4"
poetry-plugin-export = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
